# the-one-fca-handbook-mcp

./: .gitignore  Dockerfile  Makefile  README.md  data  pyproject.toml
.github/workflows/: ci.yml  docker.yml
.kiro/settings/: mcp.json
.kiro/steering/: product.md  structure.md  tech.md
resources/: business-statement.md  drg-research.md  firm-input-analysis.md  firm_input_example.json  gaars-pattern-analysis.md  requirements.md
resources/drg_samples/: AIF001-Data-Definition V1.2.1.xls  AIF001-Data-Definition V2.xls  AIFMD_DATMAN_V2.xsd  CCR-Complaints-Data-Definition.xlsx  CCR-Complaints-Map-Template.xlsx  CCR-Complaints-Schema.xsd  CCR001-Data-Definition.xlsx  CCR001-Map-Template.xls  CCR001-Schema.xsd  CCR002-Data-Definition.xlsx  CCR002-Schema.xsd  CCR002_MapTemplate_v4.xlsx  CCR003-Data-Definition.xlsx  CCR003-Schema.xsd  CCR003_MapTemplate_v2.xlsx  CCR004-Data-Definition.xlsx  CCR004-Schema.xsd  CCR005-Data-Defiition.xlsx  CCR005-Schema.xsd  CCR006-Data-Defiition.xlsx  CCR006-Schema.xsd  CCR007-Data-Definition.xlsx  CCR007-Schema.xsd  CCR008-Data-Definition.xls  CCR008-Schema.xsd  CCR009-Data-Definition.xlsx  CCR009-Schema.xsd  DRG Change Log.xlsx  FIN-A Mapped Template.xls  FIN-A-Data-Definition.xls  FIN-A-Schema.xsd  FIN-APF-Data-Definition.xls  FIN-APF-Schema new.xsd  FSA001-Data-Definition.xls  FSA001-Schema.xsd  FSA002-Data-Definition.xls  FSA002-Schema.xsd  FSA030-Data-Definition.xls  FSA030-Schema.xsd  (+43 more)
scripts/: scrape_drg.py  scrape_drg_all.py  scrape_drg_explore.py  scrape_drg_full.py  scrape_drg_v3.py
src/: __main__.py  kb_assets.py  server.py
(+1 files in other folders)
